# cat_patrol_robot

./: .gitignore  CMakeLists.txt  README.md  architecture.md  hardware.md  loop-patrol-architecture.md  package.xml  phase0-status.md  phase1-status.md  phase2-status.md  phase3-status.md  phase4-status.md  phase5-status.md  plan.md  setup.cfg  setup.py
cat_patrol_robot/: __init__.py  mail_node.py  readme.md  voice_node.py
config/: amcl_params.yaml  b.rviz  cat_patrol_params.yaml  cat_voice_params.yaml  fastdds_mapping.xml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_post_lidar_notes.yaml  navigate_through_poses_no_blind_backup.xml  navigate_to_pose_no_blind_backup.xml
include/cat_patrol_robot/: patrol_node.hpp
include/cat_patrol_robot/patterns/: classic_pattern.hpp  patrol_pattern.hpp  till_obstacle_back_pattern.hpp
launch/: cat_patrol.launch.py  cat_voice.launch.py  localization.launch.py  navigation.launch.py  patrol_system.launch.py
maps/: living_room_v1.pgm  living_room_v1.yaml
phase1-files/: cyclonedds.xml  j.sh  sync.sh  wifi-lock-watch.sh
phase1-files/humble-docker/: Dockerfile  docker-compose.yml
phase1-files/myscripts/: slam.sh  viz.sh
phase1-files/slam_params/: mapper_params_host.yaml
scripts/: check_active_config.sh  connect_bt_speaker.sh  enable_bt_a2dp.sh  mail_node  patrol  play_bark.sh  run_cat_patrol.sh  scan_front_filter  sync_robot_to_host.sh  voice_node  wheel_balance_diagnostic.py
src/: nav_goal_client_node.cpp  patrol_node.cpp
src/patterns/: classic_pattern.cpp  till_obstacle_back_pattern.cpp
systemd/: cat-patrol.service
yahboom_overlay/: README.md
yahboom_overlay/yahboomcar_bringup/launch/: yahboomcar_bringup_X3_launch.py
